Using Java9+ NIO API for improved performance: Modern JREs offload to OS, and do other tricks.